--- a/index.html
+++ b/index.html
@@ -10,28 +10,26 @@
 </head>
 
 <body>
-    <h1>Helloooo</h1>
+    <nav>
+        <ul class="nav-list">
+            <li><a class="nav-links" href="./index.html">Home</a></li>
+            <li><a class="nav-links" href="./about.html">About</a></li>
+            <li><a class="nav-links" href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main data-router-wrapper>
+        <section data-router-view="home" class="home">
+            <div class="home-content">
+                <div class="home-presentation">
+                    <h1>Seamless Transition</h1>
+                    <p>Beautiful!!!!</p>
+                </div>
+                <img src="./images/home.svg" alt="home">
+            </div>
+        </section>
+    </main>
     <script src="./js/index.js"></script>
 </body>
-
-<nav>
-    <ul class="nav-list">
-        <li><a class="nav-links" href="#">Home</a></li>
-        <li><a class="nav-links" href="#">About</a></li>
-        <li><a class="nav-links" href="#">Contact</a></li>
-    </ul>
-</nav>
-
-<main data-router-wrapper>
-    <section data-router-view="home" class="home">
-        <div class="home-content">
-            <div class="home-presentation">
-                <h1>Seamless Transition</h1>
-                <p>Beautiful!!!!</p>
-            </div>
-            <img src="./images/home.svg" alt="home">
-        </div>
-    </section>
-</main>
 
 </html>
